# rain_engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  sample.cpp
cmake/: compiler_options.cmake  standard_project_settings.cmake  warnings.cmake
engine/: CMakeLists.txt
engine/app/: CMakeLists.txt
engine/app/include/rain/app/: application.hpp  application_context.hpp  layer.hpp
engine/app/src/: application.cpp
engine/cmake/: compiler_options.cmake  warning.cmake
engine/cmake/toolchains/: gcc.cmake
engine/core/: CMakeLists.txt
engine/core/include/rain/core/: asert.hpp  assert.hpp  handle.hpp  log.hpp  simd.hpp  string_id.hpp  type_id.hpp  types.hpp
engine/core/include/rain/core/container/: handle_pool.hpp  rain_hash_map.hpp  rain_sparse_set.hpp  rain_vector.hpp
engine/core/include/rain/core/event/: event_context.hpp  event_debug_dump.hpp  event_fwd.hpp  event_graph_export.hpp  event_system.hpp  event_trace.hpp  event_trace_filter.hpp  event_trace_scope.hpp
engine/core/include/rain/core/math/: simd_vec2.hpp  vec2.hpp
engine/core/include/rain/core/tag/: tag.hpp  tag_container.hpp  tag_event.hpp  tag_query.hpp
engine/core/src/: log.cpp  string_id.cpp
engine/gameplay/: CMakeLists.txt
engine/gameplay/include/rain/gameplay/: behaviour_tree.hpp  gameplay_tag.hpp  gameplay_tag_container.hpp  gameplay_tag_event.hpp  gameplay_tag_query.hpp
engine/gameplay/src/: gameplay_tag.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/rain/platform/: input_action.hpp  key_code.hpp  timer.hpp  window.hpp
engine/platform/src/: input_action.cpp  timer.cpp  window.cpp
engine/render/: CMakeLists.txt
engine/render/include/rain/render/: camera_2d.hpp  render_backend.hpp  render_clear_color.hpp  render_handles.hpp  render_resource_desc.hpp  render_system_2d.hpp  sprite_2d_component.hpp  sprite_render_2d.hpp  sprite_renderer_2d.hpp
engine/render/include/rain/render/d3d11/: d3d11_render_backend.hpp
engine/render/src/: render_system_2d.cpp  sprite_renderer_2d.cpp
engine/render/src/d3d11/: d3d11_render_backend.cpp
engine/runtime/: CMakeLists.txt
engine/runtime/include/rain/runtime/: component_pool.hpp  component_registry.hpp  entity.hpp  entity_query.hpp  movement_system_2d.hpp  system_scheduler.hpp  tag_component.hpp  transform_2d_component.hpp  velocity_2d_component.hpp  world.hpp
engine/runtime/src/: entity.cpp  movement_system_2d.cpp  world.cpp
rain/: rain.md
rain/.obsidian/: workspace.json
samples/: CMakeLists.txt
samples/sample_2d_action/: CMakeLists.txt
samples/sample_2d_action/src/: main.cpp  sample_2d_world_builder.cpp  sample_2d_world_builder.hpp
